@@ -10,6 +10,8 @@ use POSIX 'strftime';
 use File::Copy;
 use File::Spec;
 
+__PACKAGE__->sql_maker_class('DBIx::Class::SQLAHacks::SQLite');
+
 sub backup
 {
   my ($self, $dir) = @_;
